# safepip

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_checks.py  test_integration.py
pipsentinel/: __init__.py  checks.py  cli.py  installer.py  lockfile.py  report.py  sandbox.py
safepip/: __init__.py  cli.py  honeypot.py  installer.py  lockfile.py  report.py  sandbox.py
