[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipsentinel"
version = "0.2.2"
description = "Hack-proof pip: supply chain security checks + import sandbox before every install"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

keywords = [
  "security", "supply-chain", "pip", "pypi",
  "sandbox", "audit", "package-manager", "devtools",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
pipsentinel = "pipsentinel.cli:main"

[project.urls]
Source    = "https://github.com/Shubham-253/pipsentinel"
Issues    = "https://github.com/Shubham-253/pipsentinel/issues"
Changelog = "https://github.com/Shubham-253/pipsentinel/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["pipsentinel*"]

[tool.pytest.ini_options]
testpaths = ["."]

[tool.setuptools.package-data]
pipsentinel = ["py.typed"]
